output/exposer-6-d6f0237c-0253-4ee9-bb23-056aacd6c005/refresh-2316a7f5-7c7b-4034-83dc-351df6266ce7/apply/ingress-d6f0237c-0253-4ee9-bb23-056aacd6c005-1862688057-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.response-404: '{"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404","messageBody":"no scopes exposed through this service."}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/actions.bg-deployment-1862688057":"{\"type\":\"forward\",\"forwardConfig\":{\"targetGroups\":[\n  {\"serviceName\":\"d-1862688057-531143095\",\"servicePort\":8080,\"weight\":100},\n  {\"serviceName\":\"d-1862688057-646224339\",\"servicePort\":8080,\"weight\":0}\n]}}\n","alb.ingress.kubernetes.io/actions.response-404":"{\"type\":\"fixed-response\",\"fixedResponseConfig\":{\"contentTyp [...]
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/actions.bg-deployment-1862688057: |
      {"type":"forward","forwardConfig":{"targetGroups":[
        {"serviceName":"d-1862688057-531143095","servicePort":8080,"weight":100},
        {"serviceName":"d-1862688057-646224339","servicePort":8080,"weight":0}
      ]}}
  creationTimestamp: "2025-06-23T18:17:06Z"
  generation: 20
  labels:
    nullplatform: "true"
    service: exposer-6
    service_id: d6f0237c-0253-4ee9-bb23-056aacd6c005
  name: k-8-s-exposer-6-d6f0237c-0253-4ee9-bb23-056aacd6c005-public
  namespace: nullplatform
  resourceVersion: "6422"
  uid: f2a2d0f1-db4f-464e-a9f8-a1d9acb3f41b
spec:
  ingressClassName: alb
  rules:
    - host: my-domain.nullapps.io
      http:
        paths:
          - backend:
              service:
                name: d-1690197263-197236571
                port:
                  number: 8080
            path: /some-path
            pathType: Prefix
          - path: /sync
            pathType: Prefix
            backend:
              service:
                name: bg-deployment-1862688057
                port:
                  name: use-annotation
status:
  loadBalancer: {}
